<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Periodical</string>
    <string name="menuitem_help">Help</string>
    <string name="menuitem_about">About</string>
    <string name="menuitem_current">Current</string>
    <string name="menuitem_list">List</string>
    <string name="menuitem_copy">Backup</string>
    <string name="menuitem_restore">Restore</string>
    <string name="menuitem_options">Options</string>
    <string name="menuitem_exit">Exit</string>
    <string name="main_button_prev">&lt;</string>
    <string name="main_button_next">&gt;</string>
    <string name="main_calday_su">SU</string>
    <string name="main_calday_mo">MO</string>
    <string name="main_calday_tu">TU</string>
    <string name="main_calday_we">WE</string>
    <string name="main_calday_th">TH</string>
    <string name="main_calday_fr">FR</string>
    <string name="main_calday_sa">SA</string>
    <string name="about_title">About</string>
    <string name="about_text">Periodical 0.15\n\nCalculation of fertility according to Knaus&#8211;Ogino\nCopyright © 2012&#8211;2014 Arno Welzel</string>
    <string name="about_details">This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.</string>
    <string name="about_ok">OK</string>
    <string name="help_title">Help</string>
    <string name="help_text">WARNING: It is not recommended to use this calendar to avoid pregnancy! There are more accurate methods, like measuring the basal body temperature.\n\nYou can change the month using the buttons or by swiping to the left or to the right.\n\nTo indicate the first day of the period, just tap the day in the calendar. To remove the entry, tap again.\n\nColors indicate the meaning of a day:\n\nRed &#8211; Days of the period.\n\nBlue &#8211; Fertile days.\n\nYellow &#8211; Infertile days.\n\nThe calculated day of ovulation is marked with an O. The current day is marked with a circle.\n\nThe calculation is done for two cycles in advance.\n\nIf you tap on an entry in the list, the corresponding month is displayed in the calendar.\n\nTo use the data backup, a memory card or internal memory must be present.</string>
    <string name="help_ok">OK</string>
    <string name="backup_title">Backup data</string>
    <string name="backup_text">Do you want to backup the current data?\nThis will replace the last backup!</string>
    <string name="backup_ok">OK</string>
    <string name="backup_cancel">Cancel</string>
    <string name="backup_finished">Backup done</string>
    <string name="backup_failed">Backup failed!</string>
    <string name="restore_title">Restore data</string>
    <string name="restore_text">Do you want to restore the last backup?\nThis will replace the current data!</string>
    <string name="restore_ok">OK</string>
    <string name="restore_cancel">Cancel</string>
    <string name="restore_finished">Restore done</string>
    <string name="restore_failed">Restore failed!</string>
    <string name="event_periodstart">Period has started</string>
    <string name="event_periodlength">Last cycle had %s days</string>
    <string name="event_periodfirst">First entry</string>
    <string name="calendaraction_title">Edit calendar entry</string>
    <string name="calendaraction_add">Mark this day as \"Period has started\"?</string>
    <string name="calendaraction_remove">Remove the \"Period has started\" mark for this day?</string>
    <string name="calendaraction_ok">Yes</string>
    <string name="calendaraction_cancel">No</string>
	<string name="page_options">Options</string>
    <string name="calculation_method">Calculation method</string>
    <string name="method_knausogino">Knaus-Ogino</string>
    <string name="method_standarddays">Standard days</string>
    <string name="options_ok">OK</string>
    <string name="options_cancel">Cancel</string>
</resources>
