<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" tools:context=".OptionsActivity">
    <RelativeLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
    
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/calculation_method"
                android:id="@+id/textView"
                android:layout_alignParentLeft="true" android:layout_marginLeft="0dp" android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"/>
        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/options_method"
                android:layout_below="@+id/textView" android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/method_knausogino"
                android:id="@+id/method_knausogino"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/method_standarddays"
                android:id="@+id/method_standarddays"
                android:layout_below="@+id/method_knausogino" android:layout_alignParentLeft="true"/>
        </RadioGroup>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options_cancel"
                android:id="@+id/options_cancel"
                android:layout_marginTop="20dp"
                android:layout_alignParentLeft="true" android:layout_below="@+id/options_method" android:minWidth="150dp"
                android:layout_marginLeft="5dp"
                android:onClick="onOptionsCancelClick"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options_ok"
                android:id="@+id/options_ok"
                android:layout_alignTop="@+id/options_cancel"
                android:layout_toRightOf="@+id/options_cancel"
                android:minWidth="150dp" android:layout_marginLeft="10dp"
                android:onClick="onOptionsOkClick"/>
    </RelativeLayout>
</ScrollView>